Aress7/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Review_Date_Time__c</fullName>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Installation_Rating__c</fullName>
        <inlineHelpText>How was your installation on the day?</inlineHelpText>
        <label>Review Installation Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Ordering_Rating__c</fullName>
        <inlineHelpText>How well was everything explained to you during the ordering process?</inlineHelpText>
        <label>Review Ordering Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Overall_Rating__c</fullName>
        <description>Overall rating of the installation submitted to reviews.co.uk</description>
        <label>Review Overall Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAT_Comment__c</fullName>
        <label>SAT Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAT_Rating__c</fullName>
        <label>SAT Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIQ_1__c</fullName>
        <inlineHelpText>The cable for your Pod Point will need to run along the wall to your meter or consumer unit. Is the total length of cable required more than 15 meters?</inlineHelpText>
        <label>Q. Cable more than 15 metres? NS=Yes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIQ_2__c</fullName>
        <inlineHelpText>Will the cable need to go under floorboards or through a ceiling?</inlineHelpText>
        <label>Q. Cable under floorboards? NS=Yes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIQ_3__c</fullName>
        <inlineHelpText>Is your meter or consumer unit located in the middle of your house (more than 2 metres away from an exterior wall)?</inlineHelpText>
        <label>Q. Meter/DB more than 2m? NS=Yes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_On__c</fullName>
        <label>Scheduled Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduling_Comms__c</fullName>
        <label>Scheduling Comms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Texted</fullName>
                </value>
                <value>
                    <fullName>Spoke on Phone</fullName>
                </value>
                <value>
                    <fullName>Emailed</fullName>
                </value>
                <value>
                    <fullName>VM</fullName>
                </value>
                <value>
                    <fullName>Emailed &amp; VM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduling_Notes__c</fullName>
        <inlineHelpText>This field can only be seen and edited by Homecharge Ops Users.</inlineHelpText>
        <label>Scheduling Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scheduling_SLA__c</fullName>
        <formula>IF( 
AND 
( 
ISBLANK(Scheduled_On__c),NOT(ISBLANK(X1st_Date_Offered__c)) 
) 
, (X1st_Date_Offered__c- DATEVALUE(Date_of_COPS_Approved__c)) 
, 
IF( AND 
( 
ISBLANK(X1st_Date_Offered__c),NOT(ISBLANK(Scheduled_On__c)) 
) 
, Scheduled_On__c - Date_of_COPS_Approved__c 
, 
IF( 
AND 
( 
ISBLANK(X1st_Date_Offered__c),ISBLANK(Scheduled_On__c) 
) 
, null 
, 
IF( 
AND 
( 
NOT(ISBLANK(X1st_Date_Offered__c)),NOT(ISBLANK(Scheduled_On__c)) 
) 
, 
MIN( Scheduled_On__c - 
Date_of_COPS_Approved__c , (X1st_Date_Offered__c- DATEVALUE(Date_of_COPS_Approved__c))),null 

) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling SLA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduling_Status__c</fullName>
        <label>Scheduling Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Booked &amp; Unconfirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_of_Work__c</fullName>
        <label>Scope of Work 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_of_Works_2__c</fullName>
        <label>Scope of Works 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signage_Installed__c</fullName>
        <label>Signage Installed</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Not_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Contact Not Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_p__c</fullName>
        <description>picture of fixing and bolt caps</description>
        <label>Fixings &amp; Bolt Caps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Standard_Install_Question_Details__c</fullName>
        <label>Standard Install Question Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Standard_Install_Upload__c</fullName>
        <label>Standard Install Upload</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Started_On__c</fullName>
        <label>Started On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status (old)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account_picklist__c</fullName>
        <formula>text( Account.Strategic_Account_picklist__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Account Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Arrival_Window_End_Time__c</fullName>
        <description>Survey Arrival Window End Time</description>
        <label>Survey Arrival Window End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Arrival_Window_Start_Time__c</fullName>
        <description>Survey Arrival Window Start Time</description>
        <label>Survey Arrival Window Start Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Description__c</fullName>
        <inlineHelpText>Instructions for the survey seen by the Install Manager and Engineer.</inlineHelpText>
        <label>Survey Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Feedback_Score__c</fullName>
        <formula>if( text(Survey_Review_Question_Photos__c) =&quot;Yes&quot;,0.25,0) + if( text( Survey_Review_Question_Quantities__c ) =&quot;Yes&quot;,0.25,0) + if( text(  Survey_Review_Question_Clarification__c ) =&quot;Yes&quot;,0.5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Feedback Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Survey_Feedback__c</fullName>
        <label>Survey Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Lead_Time__c</fullName>
        <formula>Date_When_Survey_Became_Scheduled__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Requested to Scheduled Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Quote_Lead_Time__c</fullName>
        <formula>Date_When_Survey_Became_Quoted__c -  Survey_Scheduled_Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Completed to Quote Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Requested_to_Quoted_Lead_Time__c</fullName>
        <formula>Date_When_Survey_Became_Quoted__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Requested to Quoted Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Requested_to_Site_Lead_Time__c</fullName>
        <formula>Survey_Scheduled_Start_Date_Time__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Requested to Site Lead Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Results__c</fullName>
        <description>Scope of works, products &amp; quoted price from TFA form will be shown here once submitted.</description>
        <label>Survey Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Review_Question_Clarification__c</fullName>
        <label>Could you quote without speaking to PPE?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Review_Question_Photos__c</fullName>
        <label>Are pictures clear &amp; comprehensive?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Review_Question_Quantities__c</fullName>
        <label>Are the quantities provided accurate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Scheduled_Start_Date_Time__c</fullName>
        <description>Survey Scheduled Start Date &amp; Time</description>
        <label>Survey Scheduled Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Skill_Level_Advised__c</fullName>
        <formula>IF(or( text(Account.Strategic_Account_picklist__c)=&quot;1&quot;,text(Account.Strategic_Account_picklist__c)=&quot;2&quot;,text(Account.Strategic_Account_picklist__c)=&quot;3&quot;, Total_Sockets__c &gt;4) , &quot;2&quot;, &quot;1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Skill Level Advised</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Status__c</fullName>
        <inlineHelpText>FSL Survey Work Order Status</inlineHelpText>
        <label>Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Quoted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TFAURL__c</fullName>
        <description>Link to TFA form</description>
        <label>TFAURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>T_Cs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;Cs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technician_Notes__c</fullName>
        <inlineHelpText>These notes sync with the Work Order and will be seen by the installer.</inlineHelpText>
        <label>Technician Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Termination_Images__c</fullName>
        <label>Termination Images</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tesco_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field becomes true very first time want to send an email to SF user.</description>
        <label>Tesco Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timesheet_Duration_GWs__c</fullName>
        <label>Timesheet Duration (GWs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet_Duration__c</fullName>
        <label>Timesheet Duration (PPEs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bonus__c</fullName>
        <formula>Opportunity__r.Total_Bonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <formula>IF(ISPICKVAL(Quote_1_Chosen__c, &quot;1&quot;), Total_Cost__c, Total_Cost_2__c)/(1+Contingency_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_2__c</fullName>
        <label>Total Cost 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Groundworks_Cost_2__c</fullName>
        <label>Total Groundworks Cost 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Groundworks_Cost__c</fullName>
        <label>Total Groundworks Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Labour_2__c</fullName>
        <label>Total Labour 2 (hrs)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Labour__c</fullName>
        <label>Total Labour (hrs)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Panned_Labour_Hrs__c</fullName>
        <formula>(Planned_Duration_GWs__c/2) + Planned_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Planned Labour (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sockets__c</fullName>
        <formula>Opportunity__r.Sockets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sockets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spend__c</fullName>
        <formula>CC_Acc_Spend__c+Labour_Planned__c+PM_Budget__c+ PM_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Timesheet_Labour_Hrs__c</fullName>
        <formula>(Timesheet_Duration_GWs__c/2) + Timesheet_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Timesheet Labour (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Estimate2__c</fullName>
        <formula>6.25* MAX( Planned_Duration__c , Timesheet_Duration__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>£6.25 per on-site hour - Max of planned or timesheet duration.</inlineHelpText>
        <label>Travel Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Estimate__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Travel Estimate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <label>UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Architecture__c</fullName>
        <label>Unit Architecture</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arch 1</fullName>
                </value>
                <value>
                    <fullName>Arch 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_PSL_PG_Number__c</fullName>
        <label>Unit PSL/PG Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrade?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_FSL_Pilot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use FSL Pilot</description>
        <label>Use FSL Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>Total_Budget__c-CC_Acc_Spend__c-PM_Budget__c-Travel_Estimate2__c-Labour_Planned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Condition__c</fullName>
        <formula>Account.Vehicle_Condition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Delivery_Date__c</fullName>
        <formula>Account.Vehicle_Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vehicle_End_Year__c</fullName>
        <formula>Account.Vehicle_End_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle End Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make_Account__c</fullName>
        <formula>Account.Vehicle_Make__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <label>Vehicle Make</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model_Account__c</fullName>
        <formula>Account.Vehicle_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Order_Number__c</fullName>
        <label>Vehicle Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Purchase_Option__c</fullName>
        <formula>Account.Vehicle_Purchase_Option__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Purchase Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Start_Year__c</fullName>
        <formula>Account.Vehicle_Start_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Start Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waste_Removed__c</fullName>
        <description>The work site has been handed back clean, with all waste removed?</description>
        <label>Site handed back clean &amp; waste removed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Were_Engineers_Polite__c</fullName>
        <description>Your Pod Point Team were polite and professional at all times?</description>
        <label>POD Point team were polite &amp; professiona</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_is_the_Surveyor__c</fullName>
        <formula>IF (Installer_Name__c = &quot;&quot;, &quot;&quot;, IF (Installer_Name__c = &quot;Craig&quot; || Installer_Name__c = &quot;Jahmal&quot; || Installer_Name__c = &quot;Oliver&quot; || Installer_Name__c = &quot;Nathan&quot; || Installer_Name__c = &quot;Brandon&quot; || Installer_Name__c = &quot;Jamie&quot; || Installer_Name__c = &quot;Mark&quot; || Installer_Name__c = &quot;Leighton&quot; || Installer_Name__c = &quot;Tom&quot;, &quot;POD Point Expert&quot;, &quot;Contractor&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Who is the Surveyor?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Comment__c</fullName>
        <description>Was waste remove comment</description>
        <label>1. Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Date_Offered__c</fullName>
        <label>1st Date Offered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X24_Hours_Since_Case_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>24 Hours Since Case Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2_Comment__c</fullName>
        <description>Were engineers polite comment</description>
        <label>2. Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3_Comment__c</fullName>
        <description>PM provided work plan and information</description>
        <label>3. Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pictures_of_unit__c</fullName>
        <description>pictures of finished installation</description>
        <label>pictures of unit</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>pkbgeolocalization__c</fullName>
        <description>Store the geolocalization of the customer on case creation from mobile.</description>
        <inlineHelpText>Where the customer was when the case has been created</inlineHelpText>
        <label>Customer Geolocalization</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>temp_Olev_docs_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>temp Olev docs check</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Aaron_s_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>aaron,HC Docs Request Queue</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Aaron&apos;s Open Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>HC_Docs_Team</group>
            <group>HC_Sales_Team</group>
            <group>OLEV_Team</group>
            <group>Support_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Aaron_s_Pending_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>aaron,HC Docs Request Queue</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Aaron&apos;s Pending Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>HC_Docs_Team</group>
            <group>HC_Sales_Team</group>
            <group>OLEV_Team</group>
            <group>Support_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Job_ID__c</columns>
        <columns>City__c</columns>
        <columns>PostalCode__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Scheduled_On__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Install,Survey</value>
        </filters>
        <label>All Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>Commercial_Install_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Audrianas_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>HasOptedIn_HAHBE__c</columns>
        <columns>HasOptedIn_HAHBP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>asimm</value>
        </filters>
        <label>Audriana&apos;s Open Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>HC_Sales_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Audrianas_Pending_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>HasOptedIn_HAHBE__c</columns>
        <columns>HasOptedIn_HAHBP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>asimm</value>
        </filters>
        <label>Audriana&apos;s Pending Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>HC_Sales_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Schedule_Installs</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Scheduled_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Awaiting Schedule</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Contractor_Case,Case.FieldAware_Case,Case.Install_Case</value>
        </filters>
        <label>Awaiting Schedule Installs</label>
        <language>en_US</language>
        <sharedTo>
            <group>Commercial_Install_Team</group>
        </sharedTo>
    </listViews>
</CustomObject>